--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "sarc_mediq",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://192.168.33.122:3000/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.1.0",
